--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: extra
 Maintainer: SimpleGeo Nerds <nerds@simplegeo.com>
 Uploaders: Paul Lathrop <paul@simplegeo.com>
-Build-Depends: cdbs, debhelper (>= 7), python-support, python-setuptools, python-dev, python-nose, greenlet
+Build-Depends: cdbs, debhelper (>= 7), python-support, python-setuptools, python-dev, python-nose, greenlet, python-openssl
 Standards-Version: 3.8.4
 Homepage: http://eventlet.net/
 
