--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: python
 Priority: extra
 Maintainer: SimpleGeo Nerds <nerds@simplegeo.com>
 Uploaders: Paul Lathrop <paul@simplegeo.com>
-Build-Depends: cdbs, debhelper (>= 7), python-support, python-setuptools, python-dev, python-nose, python-greenlet, python-openssl
+Build-Depends: cdbs, debhelper (>= 7), python-support, python-setuptools, python-dev, python-nose, python-greenlet, python-openssl, python-greenlet (>= 0.2)
 Standards-Version: 3.8.4
 Homepage: http://eventlet.net/
 
 Package: python-eventlet
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-setuptools
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-setuptools, python-greenlet (>= 0.2)
 Description: Eventlet is a concurrent networking library for Python
  Eventlet is a concurrent networking library for Python that allows you
  to change how you run your code, not how you write it.
